overflow x fix

--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,8 @@ Portfolio Temp
     text-align: center;
     margin-bottom:72px;
     margin-top: 65px;
-    margin-left: 100px;
-    margin-right: 100px; 
+    /* margin-left: 100px;
+    margin-right: 100px;  */
 
   }
 
@@ -70,6 +70,7 @@ body {
     width: 100vh;
     background-color: #004BF3;
     margin: 0;
+    overflow-x:hidden;
 }
 
 .main {
@@ -80,8 +81,8 @@ body {
     position: absolute;
     animation: fadein 1.5s;
   }
-  
 
+}
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
